Interfaces DAO y metodos getDAO en FactoriaDAO